--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,25 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.39);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    transform: translate(-3px, -3px );
+    border: 2px solid white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.719);
+    transition: transnform 500ms, border 300ms;
 }
